netlify toml change

--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -5,3 +5,10 @@ status = 200
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
+
+[build]
+  command = "npm run build"
+  publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
